optimized rendering of waterfall and refactored waterfall javascript and canvas to a partial

--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -1,18 +1,10 @@
-<script type="application/processing">
-char[] waterfall_data64 = "<%= @waterfall[:data] %>";
-char[] waterfall_data = decode64(waterfall_data64);
 
-size(1000, 100);
-background(0);
+<h1>Display 1</h1>
+<br />
+<br />
+<%= render 'waterfall', :waterfall => @waterfall1 %>
 
-for(int i=0; i<height; i++) {
-  for(int j=0; j<width; j++) {
-    char value = (waterfall_data[i*100+j].charCodeAt());
-    stroke(value);
-    point(j, i);
-  }
-}
-</script><canvas width="1000" height="100"></canvas>
+<%= render 'waterfall', :waterfall => @waterfall2 %>
 
-<h1>Display1#index</h1>
-<p>id: <%= @waterfall[:id] %> </p>
+<%= render 'waterfall', :waterfall => @waterfall3 %>
+
