--- a/app/views/display1/_waterfall.html.erb
+++ b/app/views/display1/_waterfall.html.erb
@@ -1,17 +1,17 @@
-<canvas id="canvas_<%= waterfall[:id] %>" width="1000" height="100"></canvas>
+<canvas id="canvas_<%= waterfall[:id] %>" width="<%= waterfall_width %>" height="<%= waterfall_height %>"></canvas>
 
 <script id="script_<%= waterfall[:id] %>" type="application/processing">
 char[] waterfall_data64 = "<%= waterfall[:data] %>";
 char[] waterfall_data = decode64(waterfall_data64);
 
-size(1000, 100);
+size(<%= waterfall_width %>, <%= waterfall_height %>);
 
 loadPixels();
 for(int i=0; i<height; i++) {
   for(int j=0; j<width; j++) {
-    char value = (waterfall_data[i*1000+j].charCodeAt());
-    pixels[i*1000+j] = color(value);
-   // pixels[i*1000+j] = color(value,value,value);
+    char value = (waterfall_data[i*<%= waterfall_width %>+j].charCodeAt());
+    pixels[i*<%= waterfall_width %>+j] = color(value);
+   // pixels[i*<%= waterfall_width %>+j] = color(value,value,value);
   }
 }
 updatePixels();
