--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -1,11 +1,43 @@
 
-<h1>Display 1</h1>
-<br />
-<br />
-<%= render 'waterfall', :waterfall => @waterfall1 %>
 
-<%= render 'waterfall', :waterfall => @waterfall2 %>
+<div id="display1_header">
+  <div class="text-large" style="float:left; width:125px;"><%= image_tag "logo_seti.png" %></div>
+  <div class="text-title" style="float:left; height:65px; vertical-align:bottom;">What We are Currently Scanning</div>
+  <div class="float-wall"></div>
+</div>
 
-<%= render 'waterfall', :waterfall => @waterfall3 %>
+<div id="beam_row">
+  <div style="float:left;">Observation History</div>
+  <div style="float:left; padding-left:5px;">
+    <div style="float:left;"><%= render 'waterfall', :waterfall => @waterfall1 %></div>
+    <div style="float:left; padding-left:5px;"><%= render 'baseline', :baseline => @baseline1 %></div>
+    <div class="float-wall"></div>
 
-<%= render 'baseline', :baseline => @baseline1 %>
+    <div class="text-large" style="float:left;">Beam 1</div>
+  </div>
+  <div class="float-wall"></div>
+</div>
+
+<div id="beam_row">
+  <div style="float:left;">Observation History</div>
+  <div style="float:left; padding-left:5px;">
+    <div style="float:left;"><%= render 'waterfall', :waterfall => @waterfall2 %></div>
+    <div style="float:left; padding-left:5px;"><%= render 'baseline', :baseline => @baseline1 %></div>
+    <div class="float-wall"></div>
+
+    <div class="text-large" style="float:left;">Beam 2</div>
+  </div>
+  <div class="float-wall"></div>
+</div>
+
+<div id="beam_row">
+  <div style="float:left;">Observation History</div>
+  <div style="float:left; padding-left:5px;">
+    <div style="float:left;"><%= render 'waterfall', :waterfall => @waterfall3 %></div>
+    <div style="float:left; padding-left:5px;"><%= render 'baseline', :baseline => @baseline1 %></div>
+    <div class="float-wall"></div>
+
+    <div class="text-large" style="float:left;">Beam 3</div>
+  </div>
+  <div class="float-wall"></div>
+</div>
