--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -9,7 +9,7 @@
 <div id="beam_row">
   <div style="float:left;">Observation History</div>
   <div style="float:left; padding-left:5px;">
-    <div style="float:left;"><%= render 'waterfall', :waterfall => @waterfall1 %></div>
+    <div style="float:left;"><%= render 'waterfall', :waterfall_id => 1 %></div>
     <div style="float:left; padding-left:5px;"><%= render 'baseline', :baseline => @baseline1 %></div>
     <div class="float-wall"></div>
 
@@ -21,7 +21,7 @@
 <div id="beam_row">
   <div style="float:left;">Observation History</div>
   <div style="float:left; padding-left:5px;">
-    <div style="float:left;"><%= render 'waterfall', :waterfall => @waterfall2 %></div>
+    <div style="float:left;"><%= render 'waterfall', :waterfall_id => 2 %></div>
     <div style="float:left; padding-left:5px;"><%= render 'baseline', :baseline => @baseline1 %></div>
     <div class="float-wall"></div>
 
@@ -33,7 +33,7 @@
 <div id="beam_row">
   <div style="float:left;">Observation History</div>
   <div style="float:left; padding-left:5px;">
-    <div style="float:left;"><%= render 'waterfall', :waterfall => @waterfall3 %></div>
+    <div style="float:left;"><%= render 'waterfall', :waterfall_id => 3 %></div>
     <div style="float:left; padding-left:5px;"><%= render 'baseline', :baseline => @baseline1 %></div>
     <div class="float-wall"></div>
 
@@ -42,38 +42,64 @@
   <div class="float-wall"></div>
 </div>
 
+
+
+
 <script type="text/javascript">
-  // AJAX call to update JSON
-  function updateWaterfall(id)
+
+function drawWaterfallRows(id, start_row, end_row, data64)
+{
+  var waterfall_data = decode64(data64);
+
+  var processingInstance = null;
+  if (!processingInstance)
   {
-      if(updateWaterfall.waterfall_data == undefined)
-      {
-         updateWaterfall.waterfall_data = new Array();
-      }
+    processingInstance = Processing.getInstanceById('canvas_waterfall' + id);
+    processingInstance.drawWaterfallRows(id, start_row, end_row - start_row, waterfall_data);
+  }
+}
 
-      if(updateWaterfall.waterfall_data[id] == undefined)
-      {
-        updateWaterfall.waterfall_data[id] = {data:"", last_row:1};
-      }
-
-      // Take id and make AJAX query
-      $.ajax({
-        type:'GET',
-        url:'/display1/waterfall',
-        data:{id:id, start_row:updateWaterfall.waterfall_data[id].last_row},
-        success:function(){
-          // We should update the watefall display here
-        },
-        error:function(){
-          // We should handle error here
-        },
-        datatype:"json"
-      });
+// AJAX call to update JSON
+function updateWaterfall(id)
+{
+  if(updateWaterfall.waterfall_data == undefined)
+  {
+     updateWaterfall.waterfall_data = new Array();
   }
 
-  // Register waterfall display for automatic updates
-  $(document).ready(function(){
-    registerElementTimer(function(){updateWaterfall(1);},10000);
+  if(updateWaterfall.waterfall_data[id] == undefined)
+  {
+    updateWaterfall.waterfall_data[id] = {data:"", last_row:1};
+  }
+
+  // Take id and make AJAX query
+  $.ajax({
+    type:     'GET',
+    url:      '/display1/waterfall',
+    data:     { id:id, start_row:updateWaterfall.waterfall_data[id].last_row },
+    success:  function(response) {
+      // store the last row we have so far, so that the next query gets the subsequent rows
+      updateWaterfall.waterfall_data[id].last_row = response.endRow;
+      if(updateWaterfall.waterfall_data[id].last_row >= <%= waterfall_height %> )
+      {
+        updateWaterfall.waterfall_data[id].last_row = 0;
+      }
+
+      drawWaterfallRows(response.id, response.startRow, response.endRow, response.data);
+    },
+    error:    function() {
+      // We should handle error here
+    },
+    datatype: 'json'
   });
+}
+
+// Register waterfall display for automatic updates
+$(document).ready(function()
+{
+  registerElementTimer(function() { updateWaterfall(1); }, 1500);
+  registerElementTimer(function() { updateWaterfall(2); }, 1500);
+  registerElementTimer(function() { updateWaterfall(3); }, 1500);
+});
 
 </script>
