--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -10,7 +10,7 @@
   <div style="float:left;">Observation History</div>
   <div style="float:left; padding-left:5px;">
     <div style="float:left;"><%= render 'waterfall', :waterfall_id => 1 %></div>
-    <div style="float:left; padding-left:5px;"><%= render 'baseline', :baseline => @baseline1 %></div>
+    <div style="float:left; padding-left:5px;"><%= render 'baseline', :baseline => @baseline1, :baseline_id => 1 %></div>
     <div class="float-wall"></div>
 
     <div class="text-large" style="float:left;">Beam 1</div>
@@ -22,7 +22,7 @@
   <div style="float:left;">Observation History</div>
   <div style="float:left; padding-left:5px;">
     <div style="float:left;"><%= render 'waterfall', :waterfall_id => 2 %></div>
-    <div style="float:left; padding-left:5px;"><%= render 'baseline', :baseline => @baseline1 %></div>
+    <div style="float:left; padding-left:5px;"><%= render 'baseline', :baseline => @baseline1, :baseline_id => 2 %></div>
     <div class="float-wall"></div>
 
     <div class="text-large" style="float:left;">Beam 2</div>
@@ -34,7 +34,7 @@
   <div style="float:left;">Observation History</div>
   <div style="float:left; padding-left:5px;">
     <div style="float:left;"><%= render 'waterfall', :waterfall_id => 3 %></div>
-    <div style="float:left; padding-left:5px;"><%= render 'baseline', :baseline => @baseline1 %></div>
+    <div style="float:left; padding-left:5px;"><%= render 'baseline', :baseline => @baseline1, :baseline_id => 3 %></div>
     <div class="float-wall"></div>
 
     <div class="text-large" style="float:left;">Beam 3</div>
