--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -18,12 +18,13 @@ root {
 body {
     background-color: #000000;
 
-    margin:10px;
-    padding:0px;
+    margin: 10px;
+    padding: 0px;
 
     font-family: arial;
     font-size: 28px;
     color: #80d1ff;
+    width: 1910px;
 }
 
 #display1_header {
