use baseline data received from seti server to render chart and did some refactoring

--- a/app/views/display1/_beam.html.erb
+++ b/app/views/display1/_beam.html.erb
@@ -15,8 +15,8 @@
   </div>
 
   <div style="float:left; padding-left:5px;">
-    <div>Waterfall<br /><%= render 'waterfall', :waterfall_id => waterfall_id %></div>
-    <div style="padding-top:15px;">Baseline<br /><%= render 'baseline', :baseline => baseline %></div>
+    <div>Waterfall<br /><%= render 'waterfall', :waterfall_id => beam_id %></div>
+    <div style="padding-top:15px;">Baseline<br /><%= render 'baseline', :baseline_id => beam_id %></div>
   </div>
   
   <div class="beam_observation_history">
