--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -6,11 +6,11 @@
 </div>
 
 <div class="divider-horizontal"></div>
-<%= render 'beam', :beam_id => 1, :waterfall_id => 1, :baseline => @baseline1 %>
+<%= render 'beam', :beam_id => 1 %>
 <div class="divider-horizontal"></div>
-<%= render 'beam', :beam_id => 2, :waterfall_id => 2, :baseline => @baseline1 %>
+<%= render 'beam', :beam_id => 2 %>
 <div class="divider-horizontal"></div>
-<%= render 'beam', :beam_id => 3, :waterfall_id => 3, :baseline => @baseline1 %>
+<%= render 'beam', :beam_id => 3 %>
 
 <script type="text/javascript">
 
