* add placeholders for activity and beam information * dynamically update activity and beam information via ajax * dynamically update baseline image via ajax

--- a/app/views/display1/_baseline.html.erb
+++ b/app/views/display1/_baseline.html.erb
@@ -1,1 +1,1 @@
-<%= image_tag display1_baseline_chart_path(baseline_id), :style => "height:150px;", :class => "baseline" %>
+<%= image_tag display1_baseline_chart_path(baseline_id), :style => "height:150px;", :class => "baseline", :id => "baseline#{baseline_id}" %>
