--- a/app/views/display1/_beam.html.erb
+++ b/app/views/display1/_beam.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div id="beam<%= beam_id %>">
   <div class="beam_information">
     <div class="beam_information_top">
       <div class="text-large">Beam <%= beam_id %></div>
