open sourced header added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,42 @@
+<!--
+################################################################################
+#
+# File:    application.html.erb
+# Project: World of SETI (WOS)
+# Authors:     
+#                  Alan Mak
+#                  Anthony Tang
+#                  Dia Kharrat
+#                  Paul Wong
+# 
+# The initial source was worked on by students of Carnegie Mellon Silicon Valley
+#
+# Copyright 2011 The SETI Institute
+#
+# World of SETI is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+# 
+# World of SETI is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with World of SETI.  If not, see<http://www.gnu.org/licenses/>.
+# 
+# Implementers of this code are requested to include the caption
+# "Licensed through SETI" with a link to setiQuest.org.
+# 
+# For alternate licensing arrangements, please contact
+# The SETI Institute at www.seti.org or setiquest.org. 
+#
+################################################################################
+-->
+
 <!DOCTYPE html>
+
 <html>
 <head>
   <title>SetiWorld</title>
