--- a/app/views/display1/_baseline.html.erb
+++ b/app/views/display1/_baseline.html.erb
@@ -35,4 +35,4 @@
 ################################################################################
 -->
 
-<%= image_tag display1_baseline_chart_path(baseline_id), :style => "height:150px;", :class => "baseline", :id => "baseline#{baseline_id}" %>
+<%= image_tag display1_baseline_chart_path(baseline_id), :class => "baseline", :id => "baseline#{baseline_id}" %>
