--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -134,12 +134,6 @@ body {
     padding-left: 25px;
 }
 
-.beam_observation_history {
-    float: left;
-    padding-left: 15px;
-    vertical-align: bottom;
-}
-
 .divider-horizontal {
     margin-top: 25px;
     margin-left: 50px;
@@ -162,22 +156,55 @@ body {
     padding-left: 25px;
 }
 
-.observation_history_table {
+.beam_frequency_coverage {
+    float: left;
+    padding-left: 15px;
+    vertical-align: bottom;
+}
+
+.frequency_coverage_table {
     background-color: #80d1ff;
     width: 300px;
 }
 
-.observation_history_table th {
+.frequency_coverage_table th {
     background-color: #ffffff;
     color: #0072ff;
     padding: 5px;
 }
 
-.observation_history_table td {
+.frequency_coverage_table_header {
+    color: #000000;
+    height: 20px;
+}
+
+.frequency_coverage_table td.header {
     background-color: #ffffff;
     font-size: 18px;
-    color: #000000;
     padding: 5px;
+    width: 90px;
+}
+
+.frequency_coverage_table td {
+    padding: 0px;
+    margin: 0px;
+}
+
+#frequency_cover_data_table {
+    padding: 0px;
+    margin: 0px;
+}
+
+#frequency_cover_data_table td.off {
+    background-color: #ffffff;
+    width: 20px;
+    height: 20px;
+}
+
+#frequency_cover_data_table td.on {
+    background-color: green;
+    width: 20px;
+    height: 20px;
 }
 
 .float-wall {
