--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -163,7 +163,7 @@ body {
 }
 
 .frequency_coverage_table {
-    background-color: #80d1ff;
+    background-color: #0072ff;
     width: 300px;
 }
 
@@ -176,13 +176,25 @@ body {
 .frequency_coverage_table_header {
     color: #000000;
     height: 20px;
+    text-align: center;
 }
 
 .frequency_coverage_table td.header {
     background-color: #ffffff;
     font-size: 18px;
-    padding: 5px;
-    width: 90px;
+    width: 100px;
+    text-align: right;
+}
+
+.frequency_coverage_table_footer {
+    color: #000000;
+    height: 20px;
+}
+
+.frequency_coverage_table td.footer {
+    background-color: #ffffff;
+    font-size: 18px;
+    text-align: left;
 }
 
 .frequency_coverage_table td {
@@ -193,6 +205,7 @@ body {
 #frequency_cover_data_table {
     padding: 0px;
     margin: 0px;
+    width: 200px;
 }
 
 #frequency_cover_data_table td.off {
@@ -205,6 +218,7 @@ body {
     background-color: green;
     width: 20px;
     height: 20px;
+    border: 1px solid #80d1ff;
 }
 
 .float-wall {
