Making freqnency coverage look better

--- a/app/views/display1/_beam.html.erb
+++ b/app/views/display1/_beam.html.erb
@@ -67,7 +67,7 @@
             </table>
           </td>
           <td>
-            <table id="frequency_cover_data_table">
+            <table id="frequency_cover_data_table<%=beam_id%>" class="frequency_cover_data_table">
             <% 8.times do %>
               <tr>
                 <% 10.times do %>
