--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -209,13 +209,15 @@ body {
 }
 
 .frequency_cover_data_table td.off {
-    background-color: #ffffff;
+    background-color: #FF0000;
+    background: -moz-linear-gradient(top, #ff0000, #AA0000);
     width: 20px;
     height: 20px;
 }
 
 .frequency_cover_data_table td.on {
-    background-color: green;
+    background-color: #00FF00;
+    background: -moz-linear-gradient(top, #00ff00, #006a00);
     width: 20px;
     height: 20px;
     border: 1px solid #80d1ff;
